Fixes the tag list on IE7.
git-svn-id: https://svn.habariproject.org/habari/trunk/htdocs/system@2244 653ae4dd-d31e-0410-96ef-6bf7bf53c507

--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -1482,6 +1482,9 @@ ul.dropbutton li.nodisplay {
 	margin: 0 5px;
 	line-height: 20px;
 	padding: 2px 0;
+}
+
+.tag span {
 	white-space: nowrap;
 }
 
